# rust_chatter

./: Cargo.toml  README.md  migrations.toml
src/: client.rs  database.rs  database3.rs  main.rs  message.rs  network.rs  networking.rs  request.rs  response.rs  server.rs
