[package]
name = "rust_chatter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ="3.0.0-beta.2"
tokio = {version = "1.9.0", features = ["full"]}
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"

rusqlite = {version="0.25.3", features=["bundled"]}
time = "0.3.0"

# diesel = { version = "1.4.7", features = ["sqlite"] }
# dotenv = "0.15.0"

chrono = "0.4.19"
# mysql ="21.0.1"