# cargo-features = ["strip"]
[package]
name = "rust_chatter"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.21.0"
eframe = "0.21.3"

tokio = { version = "1.27.0", features = ["full"] }
clap = {version = "4.2.1", features = ["derive"]}

serde = { version = "1.0.159", features = ["derive"] }
bincode = "1.3.3"

time = "0.3.20"
chrono = "0.4.24"

# rusqlite = { version = "0.29.0", features = ["bundled"] }
turbosql = "0.7.0"